--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free" : "^5.15.4",
+    "tailwindcss": "^3.0.20",
+    "vue-router": "^4.2.5",
     "vue": "^3.4.19"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.11.10",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/tsconfig": "^0.5.1",
+    "npm-run-all2": "^6.1.1",
+    "typescript": "~5.3.0",
+    "unplugin-vue-router": "^0.8.4",
+    "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
   }
 }
