--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,10 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free" : "^5.15.4",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "tailwindcss": "^3.0.20",
-    "vue-router": "^4.2.5",
-    "vue": "^3.4.19"
+    "vue": "^3.4.19",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
