--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@vue/compiler-sfc": "^3.4.21",
     "tailwindcss": "^3.0.20",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
