--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/compiler-sfc": "^3.4.21",
-    "tailwindcss": "^3.0.20",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   },
@@ -23,7 +22,10 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.18",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-router": "^0.8.4",
     "vite": "^5.0.11",
