--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.18",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-router": "^0.8.4",
