--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/compiler-sfc": "^3.4.21",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
