--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "tailwind": "^3.0.0",
     "@vue/compiler-sfc": "^3.4.21",
+    "tailwind": "^3.0.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
@@ -31,7 +31,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-router": "^0.8.4",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
+    "vite": "^5.0.11"
   }
 }
