Add MongoDB dependency and refactor user API routes

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/compiler-sfc": "^3.4.21",
+    "mongodb": "^6.6.0",
     "tailwind": "^3.0.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
