--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/compiler-sfc": "^3.4.21",
+    "axios": "^1.6.8",
     "mongodb": "^6.6.0",
     "tailwind": "^3.0.0",
     "vue": "^3.4.19",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.12.8",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
