--- a/client/package.json
+++ b/client/package.json
@@ -1,26 +1,21 @@
 {
   "name": "client",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@vue/compiler-sfc": "^3.4.21",
-    "amqplib": "^0.8.0",
-    "axios": "^1.6.8",
-    "mongodb": "^6.6.0",
     "tailwind": "^3.0.0",
     "vue": "^3.4.26",
     "vue-router": "^4.3.2",
-    "vue-toastification": "^2.0.0-rc.5",
-    "vuex": "^4.1.0"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
@@ -35,6 +30,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-router": "^0.8.4",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vue-tsc": "1.8.27"
   }
 }
