--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "tailwind": "^3.0.0",
     "vue": "^3.4.26",
     "vue-router": "^4.3.2",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
