--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "tailwind": "^3.0.0",
     "vue": "^3.4.26",
