--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,9 +3,9 @@
   "references": [
     {
       "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
     }
-  ],
-  "compilerOptions": {
-    "module": "es2020"
-  }
+  ]
 }
