--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -5,6 +5,8 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "allowJs": true,
+    "noImplicitAny": false,
     
 
     "baseUrl": ".",
