--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "node_modules/@types/**/*.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "node_modules/@types/**/*.d.ts", "../server/middleware/auth.js"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
