Update import paths for auth middleware and myfetch in NavBar and session.ts

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "node_modules/@types/**/*.d.ts", "../server/middleware/auth.js"],
-  "exclude": ["src/**/__tests__/*"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "node_modules/@types/**/*.d.ts", "server/**/*"],
+  "exclude": ["src/**/__tests__/*", "server/middleware/auth.js"],
   "compilerOptions": {
     "composite": true,
     "types": ["node", "vite/client"],
