refactor: Update import paths for auth middleware and myfetch in NavBar and session.ts

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "- Create another repo",
     "author": "",
     "license": "ISC",
+    "type": "module", 
     "scripts": {
         "build": "npm i --production && cd client && npm i && npm run build",
         "start": "node server/index.js",
