refactor: Update import paths for auth middleware and myfetch in NavBar and session.ts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@myusername/midterm-website-1",
+    "name": "@robertbonet/midterm-website-1",
     "version": "1.0.0",
-    "description": "- Create another repo",
+    "description": "Final Project for Web Server Programming",
     "author": "",
     "license": "ISC",
     "type": "commonjs",
