--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "@types/node": "^20.12.8",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/compiler-sfc": "^3.4.27",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.18",
     "npm-run-all2": "^6.1.1",
