--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "animejs": "^3.2.2",
     "auto-routes": "^0.0.3",
     "dotenv": "^16.4.5",
