--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,4 +1,5 @@
 {
+  "allowJS": true,
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
