--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "jsonwebtoken": "^9.0.2"
     },
     "devDependencies": {
+        "@types/node": "^20.12.12",
         "nodemon": "^3.0.3"
     }
 }
