--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "auto-routes": "^0.0.3",
     "dotenv": "^16.4.5",
     "tailwind": "^3.0.0",
+    "three": "^0.164.1",
     "vue": "^3.4.26",
     "vue-router": "^4.3.2",
     "vue-toastification": "^2.0.0-rc.5",
@@ -38,7 +39,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-router": "^0.8.4",
-    "vite": "^5.0.11",
+    "vite": "^5.2.11",
     "vue-tsc": "1.8.27"
   }
 }
